[package]
name = "ember_bed"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ember_bed"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
anchor-spl = "0.25.0"
mpl-token-metadata = { version = "1.2.7", features = ["no-entrypoint"] }
spl-token = { version = "3.3.1", features = ["no-entrypoint"] }
solana-program = "1.8.9"
